# OS-Project-Linux-Process-Manager

./: .dockerignore  COMPLETE_DOCUMENTATION.md  Cargo.toml  Dockerfile  PROJECT_REPORT.md  README.md  SURVEY_AND_RESEARCH.md  config.example.toml  demo.sh  test.sh
benches/: benchmarks.rs
examples/: api_client.sh  api_export_csv.py  api_monitor_cpu.py
report/: COMPILATION_GUIDE.md  PRE_SUBMISSION_CHECKLIST.md  QUICK_START.txt  README.md  REPORT_SUMMARY.md  STRUCTURE.txt  build.sh  main.tex  references.bib
report/chapters/: 01-introduction.tex  02-requirements.tex  03-architecture.tex  04-implementation.tex  05-usage.tex  06-testing.tex  07-security.tex  08-evaluation.tex  09-conclusions.tex  appendix-a-code.tex  appendix-b-benchmarks.tex  appendix-c-screenshots.tex  appendix-d-api.tex
requirements/: README.md  architecture.md  functional-requirements.md  grading-rubric.md  non-functional-requirements.md  test-plan.md
src/: affinity.rs  alerts.rs  anomaly.rs  api.rs  config.rs  containers.rs  diffing.rs  gpu.rs  groups.rs  history.rs  lib.rs  logging.rs  main.rs  memmap.rs  metrics.rs  network.rs  process.rs  profiles.rs  snapshots.rs  tree.rs  ui.rs
tests/: integration_test.rs  integration_tests.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: ConnectionStatus.tsx  Header.tsx  ProcessActions.tsx  ProcessTable.tsx  SystemStats.tsx
web/src/hooks/: useProcesses.ts
web/src/types/: index.ts
