[package]
name = "process-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.29"
users = "0.11"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
actix-web = "4.0"
actix-cors = "0.7"
actix-files = "0.6"
rust-embed = "8.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
notify-rust = "4.10"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1-rustls-tls", "smtp-transport"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
nix = { version = "0.27", features = ["sched", "process"] }
num_cpus = "1.16"
hostname = "0.3"

[dev-dependencies]
tempfile = "3.8"
